--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,1 @@
-<app-swiper [options]="numbers" [slidesTemplate]="myTemplate"></app-swiper>
-
-<ng-template #myTemplate let-number let-index="index" let-nav="navigation">
-  <div>
-    Number is: {{number}}
-    <br>
-    Index is: {{index}}
-  </div>
-
-  <button (click)="nav.next()">NEXT</button>
-</ng-template>
+<app-nav></app-nav>
