--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -7,9 +7,8 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'"
     [opened]="(isHandset$ | async) === false"
   >
-    <mat-toolbar>Menu</mat-toolbar>
+    <mat-toolbar routerLink="/">Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/">Default</a>
       <a mat-list-item routerLink="/consumer1">Consumer 1</a>
       <a mat-list-item routerLink="/consumer2">Consumer 2</a>
     </mat-nav-list>
